# Personal-Assistant

./: .gitignore  README.md  architect.md  hetzner.md  langgraph.json  milestone.md
README/: 00-overview.md  01-architecture.md  02-database-schema.md  03-integration-flows.md  04-prioritization-rules.md  05-briefing-template.md  06-milestones.md  07-decision-log.md  08-week-1-execution-plan.md  09-api-contracts.md  10-openapi-starter.yaml  11-fastapi-bootstrap-plan.md  12-google-oauth-setup.md  13-fastapi-code-scaffold.md  14-alembic-migrations-guide.md  15-local-dev-setup.md  16-day-1-task-board.md  17-day-2-task-board.md  18-day-3-task-board.md  19-day-4-task-board.md  20-day-5-task-board.md  21-day-6-task-board.md  22-day-7-task-board.md  index.md
backend/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
backend/app/: __init__.py  config.py  db.py  graph.py  main.py  models.py  scheduler.py  telegram_poller.py  workflow.py
backend/app/agents/: calendar_agent.py  compose_agent.py  gmail_agent.py  reminders_agent.py  whatsapp_agent.py  youtube_agent.py
backend/app/routers/: reauth.py  whatsapp.py
backend/app/tools/: calendar.py  gmail.py  google_oauth.py  telegram.py  token_health.py  whatsapp.py  youtube.py
backend/config/: channels.yaml
backend/scripts/: google_login.py  test_gmail.py  test_telegram.py  test_youtube.py
launchd/: com.personalassistant.morning.plist  com.personalassistant.server.plist  com.personalassistant.whatsapp.plist
splash/: index.html
whatsapp_service/: Dockerfile  index.js  package-lock.json  package.json
