[project]
name = "personal-assistant"
version = "0.1.0"
description = "Personal morning briefing agent (YouTube + Gmail + Calendar -> Telegram)"
requires-python = ">=3.11"
dependencies = [
    # Web + scheduling
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "apscheduler>=3.10.4",

    # Config / settings
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "python-dotenv>=1.0.1",
    "PyYAML>=6.0.2",

    # Database
    "SQLAlchemy>=2.0.30",

    # HTTP
    "httpx>=0.27.0",
    "tenacity>=9.0.0",

    # Google APIs (Gmail, Calendar, YouTube Data)
    "google-api-python-client>=2.140.0",
    "google-auth>=2.33.0",
    "google-auth-oauthlib>=1.2.1",
    "google-auth-httplib2>=0.2.0",

    # Agent runtime + LLM (used in later steps)
    "langgraph>=0.2.30",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",

    # YouTube transcripts (used in step 6)
    "youtube-transcript-api>=0.6.2",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6.0",
    "pytest>=8.3.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"
